[gd_scene load_steps=25 format=3 uid="uid://000mnlm4usd0"]

[ext_resource type="Script" uid="uid://bvsy2i1anfr5i" path="res://src/Scripts/main.gd" id="1_0dd57"]
[ext_resource type="Texture2D" uid="uid://wlo1euh3b6yk" path="res://src/Sprites/BG.png" id="1_2av6j"]
[ext_resource type="PackedScene" uid="uid://tt4hmqejefi" path="res://src/Scenes/rally_point.tscn" id="3_7j17x"]
[ext_resource type="Script" uid="uid://bbu7cc1ijloek" path="res://src/Scripts/camera_2d.gd" id="5_h6v6y"]
[ext_resource type="Texture2D" uid="uid://brvpw4mwq6sqw" path="res://src/Sprites/RallyBtn.png" id="7_4vboo"]
[ext_resource type="Script" uid="uid://cvr576m1jcfr4" path="res://src/Scripts/ui.gd" id="7_vgwx1"]
[ext_resource type="Texture2D" uid="uid://brdapwl5ry4ch" path="res://src/Sprites/AntBright.png" id="8_vdiyp"]
[ext_resource type="PackedScene" uid="uid://cx8chjfirpnvt" path="res://src/Scenes/juice.tscn" id="8_vgwx1"]
[ext_resource type="Theme" uid="uid://b17elty3y3f28" path="res://src/Resources/theme.tres" id="8_wf0w2"]
[ext_resource type="Texture2D" uid="uid://gop673u8i0to" path="res://src/Sprites/Title.png" id="13_5na2v"]
[ext_resource type="LabelSettings" uid="uid://bav3ky0bcp8fs" path="res://src/Resources/TitleSettings.tres" id="14_isqvi"]
[ext_resource type="Texture2D" uid="uid://cfptycpbtcj4e" path="res://src/Sprites/mouse_left.png" id="15_e2xy3"]
[ext_resource type="Texture2D" uid="uid://c8em0c0537m50" path="res://src/Sprites/mouse_middle.png" id="16_w0vrg"]
[ext_resource type="AudioStream" uid="uid://7ha4kstfmtti" path="res://src/Sounds/powerUp (1).wav" id="18_w0vrg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4vboo"]
bg_color = Color(0.0588235, 0.164706, 0.247059, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.960784, 0.835294, 0.737255, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 16.0
expand_margin_top = 16.0
expand_margin_right = 16.0
expand_margin_bottom = 16.0

[sub_resource type="Animation" id="Animation_n0mpp"]
length = 0.001
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_vdiyp"]
resource_name = "Spawn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.191667),
"transitions": PackedFloat32Array(1, 0.5, 2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4vboo"]
_data = {
&"RESET": SubResource("Animation_n0mpp"),
&"Spawn": SubResource("Animation_vdiyp")
}

[sub_resource type="LabelSettings" id="LabelSettings_n0mpp"]
font_size = 64

[sub_resource type="Animation" id="Animation_e2xy3"]
resource_name = "hover"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(640, 167), Vector2(640, 147), Vector2(640, 167)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w0vrg"]
_data = {
&"hover": SubResource("Animation_e2xy3")
}

[sub_resource type="Animation" id="Animation_vh02n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(37, 518)]
}

[sub_resource type="Animation" id="Animation_isqvi"]
resource_name = "hover"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(37, 518), Vector2(37, 498), Vector2(37, 518)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k0mjx"]
_data = {
&"RESET": SubResource("Animation_vh02n"),
&"hover": SubResource("Animation_isqvi")
}

[node name="Main" type="Node2D"]
script = ExtResource("1_0dd57")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_speed = 30.0
editor_draw_limits = true
script = ExtResource("5_h6v6y")

[node name="AudioListener2D" type="AudioListener2D" parent="Camera2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UI" node_paths=PackedStringArray("camera")]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2
theme = ExtResource("8_wf0w2")
script = ExtResource("7_vgwx1")
rally = ExtResource("3_7j17x")
camera = NodePath("../../Camera2D")

[node name="MainHud" type="Control" parent="UI/UI"]
anchors_preset = 0
offset_left = 1280.0
offset_right = 2560.0
offset_bottom = 720.0
mouse_filter = 2

[node name="Label" type="Label" parent="UI/UI/MainHud"]
texture_filter = 1
layout_mode = 0
offset_left = 32.0
offset_top = 120.0
offset_right = 67.0
offset_bottom = 143.0
text = "z"
horizontal_alignment = 1

[node name="Hotbar" type="Control" parent="UI/UI/MainHud"]
anchors_preset = 0
offset_left = 608.0
offset_top = 640.0
offset_right = 672.0
offset_bottom = 704.0

[node name="Panel" type="Panel" parent="UI/UI/MainHud/Hotbar"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
theme_override_styles/panel = SubResource("StyleBoxFlat_4vboo")

[node name="RallyBtn" type="TextureButton" parent="UI/UI/MainHud/Hotbar"]
texture_filter = 1
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 48.0
offset_bottom = 48.0
scale = Vector2(2, 2)
pivot_offset = Vector2(16, 16)
texture_normal = ExtResource("7_4vboo")
stretch_mode = 5

[node name="Juice" parent="UI/UI/MainHud/Hotbar/RallyBtn" instance=ExtResource("8_vgwx1")]
scaleFactor = 2.2
hoverSound = true

[node name="AntBar" type="ProgressBar" parent="UI/UI/MainHud"]
layout_mode = 0
offset_left = 44.0
offset_top = 180.0
offset_right = 60.0
offset_bottom = 540.0
pivot_offset = Vector2(8, 180)
max_value = 4.0
fill_mode = 3
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/UI/MainHud/AntBar"]
libraries = {
&"": SubResource("AnimationLibrary_4vboo")
}

[node name="TextureRect" type="TextureRect" parent="UI/UI/MainHud"]
texture_filter = 1
layout_mode = 0
offset_left = 32.0
offset_top = 138.0
offset_right = 72.0
offset_bottom = 178.0
texture = ExtResource("8_vdiyp")

[node name="CompleteLevel" type="Control" parent="UI/UI"]
anchors_preset = 0
offset_left = 1280.0
offset_right = 2560.0
offset_bottom = 720.0
mouse_filter = 2

[node name="Label" type="Label" parent="UI/UI/CompleteLevel"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 88.0
text = "Finished"
label_settings = ExtResource("14_isqvi")
horizontal_alignment = 1

[node name="NextLevel" type="Button" parent="UI/UI/CompleteLevel"]
layout_mode = 0
offset_left = 590.0
offset_top = 345.0
offset_right = 690.0
offset_bottom = 376.0
pivot_offset = Vector2(45, 15)
text = "Next Level"

[node name="Juice" parent="UI/UI/CompleteLevel/NextLevel" instance=ExtResource("8_vgwx1")]
scaleFactor = 1.5
hoverSound = true
input_dependant = false

[node name="MainMenu" type="Control" parent="UI/UI"]
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
mouse_filter = 2

[node name="Title" type="Label" parent="UI/UI/MainMenu"]
visible = false
layout_mode = 0
offset_right = 1280.0
offset_bottom = 23.0
text = "Ant RTS"
label_settings = SubResource("LabelSettings_n0mpp")
horizontal_alignment = 1

[node name="Play" type="Button" parent="UI/UI/MainMenu"]
layout_mode = 0
offset_left = 612.0
offset_top = 345.0
offset_right = 668.0
offset_bottom = 377.0
pivot_offset = Vector2(28, 16)
text = "Play"

[node name="Juice" parent="UI/UI/MainMenu/Play" instance=ExtResource("8_vgwx1")]
scaleFactor = 1.5
hoverSound = true
input_dependant = false

[node name="Title2" type="Sprite2D" parent="UI/UI/MainMenu"]
texture_filter = 1
position = Vector2(640, 167)
texture = ExtResource("13_5na2v")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/UI/MainMenu/Title2"]
libraries = {
&"": SubResource("AnimationLibrary_w0vrg")
}
autoplay = "hover"

[node name="Tutorial" type="Control" parent="UI/UI/MainMenu"]
anchors_preset = 0
offset_left = 37.0
offset_top = 518.0
offset_right = 267.0
offset_bottom = 673.0
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="UI/UI/MainMenu/Tutorial"]
layout_mode = 0
offset_right = 230.0
offset_bottom = 155.0

[node name="Label" type="Label" parent="UI/UI/MainMenu/Tutorial"]
layout_mode = 0
offset_left = 35.0
offset_right = 230.0
offset_bottom = 153.0
text = "Spawn Rally Point
Move Rally Point
Select Hole (Food Source)
 / Rally Point
Pan Camera
"

[node name="MouseLeft" type="Sprite2D" parent="UI/UI/MainMenu/Tutorial"]
position = Vector2(14, 12)
texture = ExtResource("15_e2xy3")

[node name="MouseRight" type="Sprite2D" parent="UI/UI/MainMenu/Tutorial"]
position = Vector2(14, 37)
texture = ExtResource("15_e2xy3")

[node name="MouseLeft2" type="Sprite2D" parent="UI/UI/MainMenu/Tutorial"]
position = Vector2(14, 64)
texture = ExtResource("15_e2xy3")

[node name="MouseLeft3" type="Sprite2D" parent="UI/UI/MainMenu/Tutorial"]
position = Vector2(22, 116)
texture = ExtResource("15_e2xy3")

[node name="MouseLeft4" type="Sprite2D" parent="UI/UI/MainMenu/Tutorial"]
position = Vector2(6, 116)
texture = ExtResource("16_w0vrg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/UI/MainMenu/Tutorial"]
libraries = {
&"": SubResource("AnimationLibrary_k0mjx")
}

[node name="CompleteGame" type="Control" parent="UI/UI"]
anchors_preset = 0
offset_left = 1280.0
offset_right = 2560.0
offset_bottom = 720.0

[node name="Label" type="Label" parent="UI/UI/CompleteGame"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 88.0
text = "Thanks For Playing :)"
label_settings = ExtResource("14_isqvi")
horizontal_alignment = 1

[node name="MainMenu" type="Button" parent="UI/UI/CompleteGame"]
layout_mode = 0
offset_left = 585.0
offset_top = 345.0
offset_right = 695.0
offset_bottom = 376.0
pivot_offset = Vector2(55, 15)
text = "Main Menu"

[node name="Juice" parent="UI/UI/CompleteGame/MainMenu" instance=ExtResource("8_vgwx1")]
scaleFactor = 1.2
hoverSound = true
input_dependant = false

[node name="DeathMenu" type="Control" parent="UI/UI"]
anchors_preset = 0
offset_left = -1280.0
offset_bottom = 720.0

[node name="Label" type="Label" parent="UI/UI/DeathMenu"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 88.0
text = "You Died :("
label_settings = ExtResource("14_isqvi")
horizontal_alignment = 1

[node name="Retry" type="Button" parent="UI/UI/DeathMenu"]
layout_mode = 0
offset_left = 605.0
offset_top = 345.0
offset_right = 675.0
offset_bottom = 376.0
text = "Retry"

[node name="Juice" parent="UI/UI/DeathMenu/Retry" instance=ExtResource("8_vgwx1")]
scaleFactor = 1.5
hoverSound = true
input_dependant = false

[node name="PauseMenu" type="Control" parent="UI/UI"]
anchors_preset = 0
offset_left = 1280.0
offset_right = 2560.0
offset_bottom = 720.0

[node name="Label" type="Label" parent="UI/UI/PauseMenu"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 88.0
text = "Paused"
label_settings = ExtResource("14_isqvi")
horizontal_alignment = 1

[node name="PausePlay" type="Button" parent="UI/UI/PauseMenu"]
layout_mode = 0
offset_left = 605.0
offset_top = 314.0
offset_right = 675.0
offset_bottom = 345.0
pivot_offset = Vector2(35, 15)
text = "Play"

[node name="Juice" parent="UI/UI/PauseMenu/PausePlay" instance=ExtResource("8_vgwx1")]
scaleFactor = 1.5
hoverSound = true
input_dependant = false

[node name="PauseMainMenu" type="Button" parent="UI/UI/PauseMenu"]
layout_mode = 0
offset_left = 585.0
offset_top = 376.0
offset_right = 695.0
offset_bottom = 407.0
pivot_offset = Vector2(55, 15)
text = "Main Menu"

[node name="Juice" parent="UI/UI/PauseMenu/PauseMainMenu" instance=ExtResource("8_vgwx1")]
scaleFactor = 1.5
hoverSound = true
input_dependant = false

[node name="BG" type="CanvasLayer" parent="."]
layer = -1

[node name="BG" type="Sprite2D" parent="BG"]
z_index = -1
position = Vector2(640, 360)
texture = ExtResource("1_2av6j")
metadata/_edit_lock_ = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_w0vrg")
volume_db = -20.0

[connection signal="gameComplete" from="." to="UI/UI" method="_on_main_game_complete"]
[connection signal="levelComplete" from="." to="UI/UI" method="_on_main_level_complete"]
[connection signal="spawn" from="." to="UI/UI" method="_on_main_spawn"]
[connection signal="pressed" from="UI/UI/MainHud/Hotbar/RallyBtn" to="UI/UI" method="_on_rally_btn_pressed"]
[connection signal="pressed" from="UI/UI/CompleteLevel/NextLevel" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="UI/UI/CompleteLevel/NextLevel" to="UI/UI" method="_on_next_level_pressed"]
[connection signal="pressed" from="UI/UI/MainMenu/Play" to="UI/UI" method="_on_play_pressed"]
[connection signal="pressed" from="UI/UI/CompleteGame/MainMenu" to="UI/UI" method="_on_main_menu_pressed"]
[connection signal="pressed" from="UI/UI/DeathMenu/Retry" to="UI/UI" method="_on_retry_pressed"]
[connection signal="pressed" from="UI/UI/PauseMenu/PausePlay" to="UI/UI" method="_on_pause_play_pressed"]
[connection signal="pressed" from="UI/UI/PauseMenu/PauseMainMenu" to="UI/UI" method="_on_pause_main_menu_pressed"]
